--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"First project"</title>
+    <title>First project</title>
     <p1>"Сайт по фильмам"</p1>
     <script src="script.js"></script>
 </head>
